--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "classnames": "^2.5.1",
     "node": "^24.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
